Pocketfeeds: Fix derp

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zephyr.intro">
+    package="com.pocketfeeds.intro">
 
     <uses-permission android:name="android.permission.CHANGE_COMPONENT_ENABLED_STATE" />
 
